create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple website templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
+<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="cid-qXkLp097H2" id="image2-p">
 
     
 
