create github pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/w">free html5 templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
+<section class="engine"><a href="https://mobiri.se/n">free simple website templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
 
     
 
