create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">free amp templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
+<section class="engine"><a href="https://mobiri.se/n">free simple site templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
 
     
 
@@ -123,7 +123,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="whZGPqjJxC1RfhCT+RcD8KQPpoV/lAO7XfJHRCBr2xs6A6+mEYYXH9TXVckqW2wwWa8WGdXOA3VCOmcuxzgSddTmg3pHOnAbQ/qy5X9eW4+/cAXda/1ueiBZgV3giKXd" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="o8d1RU5ZcmBce4BRpPf55rxRtgp6DV87m0mmKZUuGkW/Ynv/V5rHZVHChM9XfrTKulg5BVoG8AawNotpkLvqw52R7Vz9kwwyAQTLIHkZ2azbLzewOPlnLaAQg1AhnwHO" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-18">
