create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
+<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="cid-qXkLp097H2" id="image2-p">
 
     
 
@@ -126,7 +126,7 @@
                     <div data-form-alert="" hidden="" class="align-center">شكراً لإشتراكك معانا</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="SQd2l05WlNsUSZaa5jGwGNx1KynMT6WTiSGJHj6kZ8DDD71cUTGC1EihNZbQ56y4F+A123UR0EOHzO3UTHI2agseOoaRYJ/Wga4fgCrhDSBmgtjXkNyVZNhrRsXJRiMD" data-form-email="true">
+                        <input type="hidden" value="Hty9ADhD6xwVvSetQa/IXv5Edlmmm46Be9fSKPy1mgfoa8KCHRE0Gm3xz41B97+hu4q5KggeWCmDGIHfMjRcV/UuGpjhLaSzQS7odE8b2Agmal/YthuxpNvHLLOZiDJ1" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="البريد الإلكتروني" id="email-footer4-1b">
                         </div>
@@ -137,32 +137,32 @@
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
                             <a href="https://twitter.com/mobirise" target="_blank">
-                                <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.youtube.com/c/mobirise" target="_blank">
-                                <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://instagram.com/mobirise" target="_blank">
-                                <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://plus.google.com/u/0/+Mobirise" target="_blank">
-                                <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.behance.net/Mobirise" target="_blank">
-                                <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-behance socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                 </div>
