--- a/pay.html
+++ b/pay.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free site templates</a></section><section class="cid-qXXIjUcq7L" id="image2-1d">
+<section class="engine"><a href="https://mobiri.se/m">free website design templates</a></section><section class="cid-qXXIjUcq7L" id="image2-1d">
 
     
 
@@ -76,7 +76,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 40%;">
-                <img src="assets/images/0110-1-578x830.jpg" alt="" title="">
+                <a href="index.html"><img src="assets/images/0110-1-578x830.jpg" alt="" title=""></a>
             </div>
 
             <div class="media-content">
@@ -125,7 +125,7 @@
                     <div data-form-alert="" hidden="" class="align-center">شكراً لإشتراكك معانا</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="AVhxwrH+sq9BZNQDzTqKM3BIPgwAre54pCUAd/YMW2ipw1p/f2ugR0w11+Btx4pnIdyURaPgLxhOmaTHDx5VsT5bqh9S1qpZBSvyWM/B1IxQn3iibvp0kHkVL4eOIuPI" data-form-email="true">
+                        <input type="hidden" value="EjbsnjLuPUKPkfy7TPkeMxKMpoSWjlYKjc866AMrtwghtQ1l/PVsV2lnFY5KvGzSROBVGVw3FvYPZEfBqQwjuFD7zeiEToVEfm67OPzWCJ6jeEsr1gLtq1tqvm+sSmuX" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="البريد الإلكتروني" id="email-footer4-1f">
                         </div>
@@ -136,32 +136,32 @@
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
                             <a href="https://twitter.com/mobirise" target="_blank">
-                                <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.youtube.com/c/mobirise" target="_blank">
-                                <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://instagram.com/mobirise" target="_blank">
-                                <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://plus.google.com/u/0/+Mobirise" target="_blank">
-                                <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.behance.net/Mobirise" target="_blank">
-                                <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-behance socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                 </div>
