--- a/pay.html
+++ b/pay.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/m">free website design templates</a></section><section class="cid-qXXIjUcq7L" id="image2-1d">
+<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="cid-qXXIjUcq7L" id="image2-1d">
 
     
 
@@ -125,7 +125,7 @@
                     <div data-form-alert="" hidden="" class="align-center">شكراً لإشتراكك معانا</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="EjbsnjLuPUKPkfy7TPkeMxKMpoSWjlYKjc866AMrtwghtQ1l/PVsV2lnFY5KvGzSROBVGVw3FvYPZEfBqQwjuFD7zeiEToVEfm67OPzWCJ6jeEsr1gLtq1tqvm+sSmuX" data-form-email="true">
+                        <input type="hidden" value="ZY6iGEMTWKpC9rZWq7GpnGFjCrh5APtBtOGFg4u08ODLgNPgAZ/PU49dDJZTJ3MCETpNXM4gTMCSqWTTh3ia124Cw3noE92JNUbEYRVL0Kbc75INEPOprTmOwqajLTjU" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="البريد الإلكتروني" id="email-footer4-1f">
                         </div>
@@ -135,33 +135,33 @@
                 <p class="mb-4 mbr-fonts-style foot-title display-7">تواصل معانا عبر</p>
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
-                            <a href="https://twitter.com/mobirise" target="_blank">
+                            <a href="https://twitter.com/quranbyhand/" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
+                            <a href="https://www.facebook.com/quranbyhand1/" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.youtube.com/c/mobirise" target="_blank">
+                            <a href="https://www.youtube.com/c/QuranByHand" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://instagram.com/mobirise" target="_blank">
+                            <a href="https://www.instagram.com/quranbyhand/" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://plus.google.com/u/0/+Mobirise" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon" style="color: rgb(35, 35, 35);"></span>
+                            <a href="https://www.snapchat.com/add/quranbyhand" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-snapchat socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.behance.net/Mobirise" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-behance socicon" style="color: rgb(35, 35, 35);"></span>
+                            <a href="https://api.whatsapp.com/send?phone=+966509988780" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-whatsapp socicon" style="color: rgb(35, 35, 35);"></span>
                             </a>
                         </div>
                 </div>
