--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best css templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
+<section class="engine"><a href="https://mobiri.se/i">web creation software</a></section><section class="cid-qXkLp097H2" id="image2-p">
 
     
 
@@ -126,7 +126,7 @@
                     <div data-form-alert="" hidden="" class="align-center">شكراً لإشتراكك معانا</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="wwWel6LZhLpI3ud2emTZ8YP6HpGUWClhmTqb8V4Z1h82ynCP96bxqZAABTqMnW69s6bjZ4IGCPqGH/G/syM2N2goNYyoFlM6hQb6orB6ZKljDfBvOZ5byzsZlBH4jhCa" data-form-email="true">
+                        <input type="hidden" value="cCyqOKtujMt6qXrdtbprAGpkxUIeLOebLyqdSLz7Q0Losz10xRTny/p5kmQPr6/4LeLKNtfVf7lhQ+DTY5eBwwai1SWXcqPeleyOr8dHq5krH5WTMPhGy9sXT2HcIlWw" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="البريد الإلكتروني" id="email-footer4-1b">
                         </div>
@@ -137,22 +137,22 @@
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
                             <a href="https://twitter.com/quranbyhand/" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" style="color: rgb(35, 35, 35);"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" style="color: rgb(20, 157, 204);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.facebook.com/quranbyhand1/" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(35, 35, 35);"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(7, 59, 76);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.youtube.com/c/QuranByHand" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(35, 35, 35);"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(255, 51, 102);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
                             <a href="https://www.instagram.com/quranbyhand/" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(35, 35, 35);"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(103, 80, 3);"></span>
                             </a>
                         </div>
                         <div class="soc-item">
@@ -162,7 +162,7 @@
                         </div>
                         <div class="soc-item">
                             <a href="https://api.whatsapp.com/send?phone=+966509988780" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-whatsapp socicon" style="color: rgb(35, 35, 35);"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-whatsapp socicon" style="color: rgb(5, 169, 2);"></span>
                             </a>
                         </div>
                 </div>
