--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/i">web creation software</a></section><section class="cid-qXkLp097H2" id="image2-p">
+<section class="engine"><a href="https://mobiri.se/r">bootstrap templates</a></section><section class="cid-qXkLp097H2" id="image2-p">
 
     
 
@@ -86,7 +86,7 @@
                     <p class="mbr-text mbr-fonts-style display-5">ومشروعنا هذا (بيدي رسمت حروفه وكتبت كلماته) ليس مصحفا يُقْتَنى أو كتابا يُحَبَّر ويُزخرف فحسب، إنما هو منهجٌ ومشروعٌ لاستنهاض الهمم، وميدانٌ واسعٌ للتنافس في التقرب إلى الله تعالى، واختبارٌ للصبر على الطاعة. كما هو إحياء لسنة كتابة المصحف الشريف بخط اليد؛ تلك السنة التي نَهَجَها الصحابة والتابعون ومن تبعهم بإحسان، إلى أن أماتها ظهور آلات النسخ والمطابع في العصور الحديثة. 
 <br>فليكن كل منا مشاركاً في إحياء هذه السنة العظيمة، علنا نكسب أجرها وننال خيرها في دنيانا وآخرتنا.&nbsp;<br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-5" href="pay.html">احصل على نسختك الآن</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-2" href="pay.html">احصل على نسختك الآن</a></div>
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
                     <div data-form-alert="" hidden="" class="align-center">شكراً لإشتراكك معانا</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="cCyqOKtujMt6qXrdtbprAGpkxUIeLOebLyqdSLz7Q0Losz10xRTny/p5kmQPr6/4LeLKNtfVf7lhQ+DTY5eBwwai1SWXcqPeleyOr8dHq5krH5WTMPhGy9sXT2HcIlWw" data-form-email="true">
+                        <input type="hidden" value="BTo/5E6eE3husHghfuDGyiKgdyc/SFQ0T3SS/qciFTMeRFYnZzCDN3LMOcqojE/Xh6I5cNfBOKxa4XmCR3k8hw14l0hxmKshfHzGdXjCsisOmzwk1gaB+RwF2ZjlIi3E" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="البريد الإلكتروني" id="email-footer4-1b">
                         </div>
