--- a/pay.html
+++ b/pay.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best html templates</a></section><section class="cid-qXXIjUcq7L" id="image2-1d">
+<section class="engine"><a href="https://mobiri.se/t">free amp template</a></section><section class="cid-qXXIjUcq7L" id="image2-1d">
 
     
 
@@ -80,12 +80,12 @@
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">الشراء والدفع</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">الدفع والشراء</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">فليكن كل منا مشاركاً في إحياء هذه السنة العظيمة، علنا نكسب أجرها وننال خيرها في دنيانا وآخرتنا.&nbsp;<br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-5" href="https://mobirise.com">شراء</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-2" href="https://mobirise.com">شراء</a></div>
             </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
                     <div data-form-alert="" hidden="" class="align-center">شكراً لإشتراكك معانا</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="eZWO5pHbI3DubSm0vOLtPCgkvlyqapFLrPEbyuEWmpjTVP6EOveTFYpbzA9sCuABW6KvBZS82DuzhY2eUyH0YVIGRqErKvBOhk+/5sCeTBV0VDyP/wWAIAjcjwno8Y3Z" data-form-email="true">
+                        <input type="hidden" value="YqqCIcZCFtKxpQgQ0Op/eAzb27J8tKqnm4Mpk2bAbbd09DXWP9lIvkB+cc/dOhlTM7OSewIrH315bp7NvECpWp7TFu3HF9MyUylIRsIx5KAX4bomXh9rqBDhFvftiT5h" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="البريد الإلكتروني" id="email-footer4-1f">
                         </div>
